--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <!--meta tags give browser extra info about page,search engine optimization -->
         <!--charset specifies the range of characters-->
         <meta charset="UTF-8" />
-        <title>Run Momo</title>
+        <title>Run Buddy</title>
     </head>
     <body>
-        <h3>RUN Buddy</h3>
-        What We Do
-        🏃
+        <h1>RUN BUDDY</h1>
+        What We Do What Youth Do Your Trainiers Reach Out
+        
     </body>
 
 </html>
