--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!--letting browser know its in English-->
 <html lang="em">
     <head>
+        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
     </head>
