--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href=". projects/run-buddy/assets">
     </head>
     <body>
         <!--navigation-->
