--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
         </header>
 
         <!--hero section-->
-        <section>
-            <div>
+        <section class="hero">
+            <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>  
             <form>
                 <label for="name">Enter full name:</label>
                 <input type="text" placeholder="Your Name" name="name" id="name" />
+                
                 <label for="email">Enter email address</label>
                 <input type="text" placeholder="Email Address" name="email" id="email" />
+                
                 <label for="phone">Enter a telephone number:</label>
                 <input type="text" placeholder="Phone Number" name="phone" id="phone" />
                 <p>
