--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href=". projects/run-buddy/assets">
+        <link rel="stylesheet" href=". /projects/run-buddy/assets/css/style.css">
     </head>
     <body>
         <!--navigation-->
@@ -16,7 +16,7 @@
             <nav>
                 <!--Unordered list element-->
                 <ul>
-                    <!--Lits item elamet-->
+                    <!--Liss item element-->
                     <li>
                         <!--Anchor element-->
                         <a href="#what-we-do">What We Do</a>
@@ -75,13 +75,41 @@
         </section>
 
         <!--"what we do" section-->
-        <section>
+        <section id="what-we-do">
             <h2>What We Do</h2>
+            <p> 
+               butcher selfies chambray shaby chic gentrify readymade yr Echo Park XOX 
+            </p>
         </section> 
         
         <!--"what you do" section-->
-        <section>
+        <section id="what-you-do">
             <h2>What You Do</h2>
+
+            <div>
+                <img src="./assets/images/step-1.svg" alt="" />
+                <h3>Step 1: Fill Out the Form Above.</h3>
+                <p>You're already here, so why not?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-2.svg" alt="" />
+                <h3>Step 2: Consult with One of Our Trainers.</h3>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-3.svg" alt="" />
+                <h3>Step 3: Get Running.</h3>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-4.svg" alt="" />
+                <h3>Step 4: See Results.</h3>
+                <p>Bi-weekly checkin with your trainer will keep you focused</p>
+            </div>
+
         </section>
         
         <!--"meet the trainers" section-->
