add other trainers

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
+
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -128,6 +129,30 @@
                     </p>
                 </div>
             </article>
+            
+            <!--second trainer bio-->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo asperiores porro dicta ad quos. Quasi exercitationem quibusdam repellat, officiis et tenetur ullam voluptate inventore autem quis repudiandae magni, commodi adipisci.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg">
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg">
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the HeadBand" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas eos voluptates veniam delectus corporis, expedita praesentium molestias temporibus tempora. Reiciendis ipsam commodi eligendi asperiores ipsa similique. Dicta explicabo at officia.
+                    </p>
+                </div>
+            </article>
+
         </section>
         
         <!--"reach out" section-->
