--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section id="what-we-do" class="intro">
             <h2 class="section-title primary-border">What We Do</h2>
             <p> 
-               butcher selfies chambray shaby chic gentrify readymade yr Echo Park XOX 
+               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia quisquam dicta, quam exercitationem minus repudiandae voluptate dolor veritatis, aspernatur et perspiciatis a corrupti debitis ea possimus qui delectus sunt tenetur? 
             </p>
         </section> 
         
@@ -159,6 +159,35 @@
         <section>
             <h2>Reach Out</h2>
         </section>
+
+        <div class="contact-info">
+            <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3310.866093788622!2d-117.26199794971177!3d33.91884578054739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dca60cec71aa4b%3A0x97845ab8a27b78cd!2s23080%20Alessandro%20Blvd%2C%20Moreno%20Valley%2C%20CA%2092553!5e0!3m2!1sen!2sus!4v1596602166680!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+            frameborder="0"
+            height="400"
+            width="400"
+            style="border:0"
+            allowfullscreen
+            >
+            </iframe>
+
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br /> 
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br />
+                    Some Town, CA <br />
+                    12345<br />
+                    P: 555.RUN.BUDZ (55.786.2839)<br />
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+        </div>
+
         
         <!--footer-->
         <footer>
@@ -168,7 +197,6 @@
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
-
 
     </body>
 
