--- a/index.html
+++ b/index.html
@@ -156,18 +156,12 @@
         </section>
         
         <!--"reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
-        </section>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
 
         <div class="contact-info">
             <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3310.866093788622!2d-117.26199794971177!3d33.91884578054739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dca60cec71aa4b%3A0x97845ab8a27b78cd!2s23080%20Alessandro%20Blvd%2C%20Moreno%20Valley%2C%20CA%2092553!5e0!3m2!1sen!2sus!4v1596602166680!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-            frameborder="0"
-            height="400"
-            width="400"
-            style="border:0"
-            allowfullscreen
             >
             </iframe>
 
@@ -197,6 +191,7 @@
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
+    </section>
 
     </body>
 
