add privacy polocy page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href=". /projects/run-buddy/assets/css/style.css">
+        <link rel="stylesheet" href="/users/katra/Desktop/projects/run-buddy/assets/css/style.css">
     </head>
     <body>
         <!--navigation-->
@@ -187,7 +187,7 @@
         <footer>
             <h2>❤️Made with love by Run Buddy.</h2>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
