--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="/users/katra/Desktop/projects/run-buddy/assets/css/style.css">
+        <link rel="stylesheet" href="./style.css">
+        
     </head>
     <body>
         <!--navigation-->
