--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <title>Privacy Policy - Run Buddy</title>
-        <link rel="stylesheet" href="./assets/css/style.css" />
         <link rel="./assets/css/secondary-styles.css">
+        <link rel="stylesheet" href="./assets/css/style.css" />
+       <!-- <link rel="./assets/css/secondary-styles.css">-->
     </head>
     <body>
 
