--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>  
             <form>
-                <label for="name">Enter full name:</label><br />
+                <label for="name">Enter full name:</label>
                 <input type="text" placeholder="Your Name" name="name" id="name" />
-                <br />
+                
                 <label for="email">Enter email address</label><br />
                 <input type="text" placeholder="Email Address" name="email" id="email" />
-                <br />
-                <label for="phone">Enter a telephone number:</label><br />
+                
+                <label for="phone">Enter a telephone number:</label>
                 <input type="text" placeholder="Phone Number" name="phone" id="phone" />
                 <p>
                     Have you worked out with a trainer before?
