--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <p>Fill out this form and one of our trainers will schedule a consult</p>  
             <form>
                 <label for="name">Enter full name:</label>
-                <input type="text" placeholder="Your Name" name="name" id="name" />
+                <input class="form-input" type="text" placeholder="Your Name" name="name" id="name" />
                 
                 <label for="email">Enter email address</label><br />
-                <input type="text" placeholder="Email Address" name="email" id="email" />
+                <input class="form-input" type="text" placeholder="Email Address" name="email" id="email" />
                 
                 <label for="phone">Enter a telephone number:</label>
-                <input type="text" placeholder="Phone Number" name="phone" id="phone" />
+                <input class="form-input" type="text" placeholder="Phone Number" name="phone" id="phone" />
                 <p>
                     Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
