--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         
         <!--footer-->
         <footer>
-            <h2>❤️Made with love by Run Buddy.</h2>
+            <h2 id=footers>❤️Made with love by Run Buddy.</h2>
             <div>
                 <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
