What we do section flexbox

--- a/index.html
+++ b/index.html
@@ -82,15 +82,21 @@
 
         <!--"what we do" section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p> 
-               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia quisquam dicta, quam exercitationem minus repudiandae voluptate dolor veritatis, aspernatur et perspiciatis a corrupti debitis ea possimus qui delectus sunt tenetur? 
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    What We Do
+                </h2>
+            </div>
+            <div class="flex-row">
+                <p> 
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia quisquam dicta, quam exercitationem minus repudiandae voluptate dolor veritatis, aspernatur et perspiciatis a corrupti debitis ea possimus qui delectus sunt tenetur? 
+                </p>
+            </div>    
         </section> 
         
         <!--"what you do" section-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title  secondary-border">What You Do</h2>
+            <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
