--- a/index.html
+++ b/index.html
@@ -182,6 +182,19 @@
 
         </section>
         
+         <!--Service Plans section-->
+        <section id="service-plans" class="services">
+            <a href="#service-plans">Service Plans</a>
+            <div class="service-grid-container">
+                <div class="service-grid-item">One</div>
+                <div class="service-grid-item">Two</div>
+                <div class="service-grid-item">Three</div>
+                <div class="service-grid-item">Four</div>
+                <div class="service-grid-item">Five</div>
+                <div class="service-grid-item">Six</div>
+            </div>
+        </section>
+
         <!--"reach out" section-->
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
