--- a/index.html
+++ b/index.html
@@ -61,16 +61,20 @@
                 <input class="form-input" type="text" placeholder="Phone Number" name="phone" id="phone" />
                 <p>
                     Have you worked out with a trainer before?
-                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
-                    <label for="trainer-yes">Yes</label>
-                    <input type="radio" name="trainer-confirm" id="trainer-no" />
-                    <label for="trainer-no">No</label>
+                    <span class="radio-wrapper label">
+                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                        <label for="trainer-yes">Yes</label>
+                    </span>
+                    <span class="radio-wrapper label">
+                        <input type="radio" name="trainer-confirm" id="trainer-no" />
+                        <label for="trainer-no">No</label>
+                     </span>
                 </p>
                 <p>
-                    <label for="checkbox" >
-                        I acknowledge that I am at least 18 years of age.
-                    </label>
-                    <input type="checkbox" name="age-confirm" id="checkbox" />
+                    <span class="radio-wrapper label">
+                        <input type="checkbox" name="age-confirm" id="checkbox" />
+                        <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+                    </span>
                 </p>
                 <button type="submit">
                     Get running!
