Pseudo class trainers

--- a/index.html
+++ b/index.html
@@ -166,38 +166,49 @@
 
             <div>
                 <article class="trainer">
-                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-img trainer-1">
+                        <div>
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Arron Stephens</h3>
-                        <h4 class="trainer-role">Speed / Strenght</h4>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                         </p>
                     </div>
-                </article>
+                  </article>
                 
                 <!--second trainer bio-->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill in his workout clothes" />
+                    <div class="trainer-img trainer-2">
+                        <div>
+                            <h3>Joanna Gill</h3>
+                            <h4>Endurance</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Joanna Gill</h3>
-                        <h4 class="trainer-role">Endurance</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo asperiores porro dicta ad quos. Quasi exercitationem quibusdam repellat, officiis et tenetur ullam voluptate inventore autem quis repudiandae magni, commodi adipisci.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                         </p>
                     </div>
-                </article>
+                  </article>
 
+                <!--third trainer bio-->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing his headband">
+                    <div class="trainer-img trainer-2">
+                        <div>
+                            <h3>Harry "the HeadBand" Smith</h3>
+                            <h4>Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Harry "the HeadBand" Smith</h3>
-                        <h4 class="trainer-role">Strength</h4>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas eos voluptates veniam delectus corporis, expedita praesentium molestias temporibus tempora. Reiciendis ipsam commodi eligendi asperiores ipsa similique. Dicta explicabo at officia.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                         </p>
-                 </article>
+                    </div>
+                </article>  
+        
             </div>
 
         </section>
