--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <!--"what you do" section-->
         <section id="what-you-do" class="steps">
             <!-- <div class="flex-row"> -->
+            <div>   
             <h2 class="section-title secondary-border">What You Do</h2>
 
                 <div class="step">
@@ -197,7 +198,7 @@
 
                 <!--third trainer bio-->
                 <article class="trainer">
-                    <div class="trainer-img trainer-2">
+                    <div class="trainer-img trainer-3">
                         <div>
                             <h3>Harry "the HeadBand" Smith</h3>
                             <h4>Strength</h4>
